--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -11,6 +11,7 @@
 %\usepackage[letterpaper,left=1in,right=1in,top=1in,bottom=1in,headheight=14pt]{geometry}
 %\usepackage[letterpaper]{geometry}
 %\usepackage{url}
+\usepackage{siunitx}
 \usepackage{graphicx}
 %\usepackage{rotating}
 %\usepackage{wrapfig}
@@ -754,14 +755,16 @@ placenta.lineage.specific.table <- function(analysis,output=TRUE,lineage.table=p
                                                   "}")]
         display.table[,`Human Name`:=NULL]
         # setnames(display.table,"Human Symbol","\\multicolumn{1}{p{0.5in}}{Human Symbol}")6
-        setnames(display.table,"Fold Change","$\\text{log}_2$ FC")
+        setnames(display.table,"Fold Change","{$\\text{log}_2$ FC}")
+        setnames(display.table,"FDR","{FDR}")
+        setnames(display.table,"p (t-test)","{p (t-test)}")
         print(xtable(display.table,
-                     display=c("s","s","e","g","f"),
-                     align=c("c","p{0.5in}","r","r","r")
+                     display=c("s","s","e","e","f"),
+                     align=c("c","p{0.5in}","S[table-format=1.2e2]","S[table-format=1.2e2]","S[table-format=2.2]")
                      ),
               booktabs=TRUE,
               floating=FALSE,
-              math.style.exponents=TRUE,
+              math.style.exponents=FALSE,
               sanitize.text.function=genes.table.sanitize,
               include.rownames=FALSE)
         
