add links to hugo for genes

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -15,45 +15,45 @@
 \DeclareAcronym{FDR}{short=FDR,long={False Discovery Rate}}
 \DeclareAcronym{gsea}{short=GSEA,long={gene set enrichment analysis}}
 \DeclareAcronym{FPKM}{short=FPKM,long={Fragments Per Kilobase of exon per Million reads}}
-\DeclareAcronym{HSD3B1}{short=\textit{HSD3B1},long={hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1},first-style=reversed,single={\textit{HSD3B1} (hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1)}}
-\DeclareAcronym{CSH1}{short=\textit{CSH1},long={chorionic somatomammotropin hormone 1},first-style=reversed,single={\textit{CSH1} (chorionic somatomammotropin hormone 1)}}
-\DeclareAcronym{CSH2}{short=\textit{CSH2},long={chorionic somatomammotropin hormone 2},first-style=reversed,single={\textit{CSH2} (chorionic somatomammotropin hormone 2)}}
-\DeclareAcronym{CSHL1}{short=\textit{CSHL1},long={chorionic somatomammotropin hormone like 1},first-style=reversed,single={\textit{CSHL1} (chorionic somatomammotropin hormone like 1)}}
-\DeclareAcronym{GH2}{short=\textit{GH2},long={growth hormone 2},first-style=reversed,single={\textit{GH2} (growth hormone 2)}}
-\DeclareAcronym{PRG2}{short=\textit{PRG2},long={proteoglycan 2, pro eosinophil major basic protein},first-style=reversed,single={\textit{PRG2} (proteoglycan 2, pro eosinophil major basic protein)}}
-\DeclareAcronym{CRH}{short=\textit{CRH},long={corticotropin releasing hormone},first-style=reversed,single={\textit{CRH} (corticotropin releasing hormone)}}
-\DeclareAcronym{KISS1}{short=\textit{KISS1},long={KiSS-1 metastasis-suppressor},first-style=reversed,single={\textit{KISS1} (KiSS-1 metastasis-suppressor)}}
-\DeclareAcronym{PAPPA}{short=\textit{PAPPA},long={pappalysin 1},first-style=reversed,single={\textit{PAPPA} (pappalysin 1)}}
-\DeclareAcronym{ADAM12}{short=\textit{ADAM12},long={ADAM metallopeptidase domain 12},first-style=reversed,single={\textit{ADAM12} (ADAM metallopeptidase domain 12)}}
-\DeclareAcronym{ANXA1}{short=\textit{ANXA1},long={annexin A1},first-style=reversed,single={\textit{ANXA1} (annexin A1)}}
-\DeclareAcronym{ANXA2}{short=\textit{ANXA2},long={annexin A2},first-style=reversed,single={\textit{ANXA2} (annexin A2)}}
-\DeclareAcronym{ANXA5}{short=\textit{ANXA5},long={annexin A5},first-style=reversed,single={\textit{ANXA5} (annexin A5)}}
-\DeclareAcronym{S100A11}{short=\textit{S100A11},long={S100 calcium binding protein A11},first-style=reversed,single={\textit{S100A11} (S100 calcium binding protein A11)}}
-\DeclareAcronym{S100A10}{short=\textit{S100A10},long={S100 calcium binding protein A10},first-style=reversed,single={\textit{S100A10} (S100 calcium binding protein A10)}}
-\DeclareAcronym{LGALS1}{short=\textit{LGALS1},long={galectin 1},first-style=reversed,single={\textit{LGALS1} (galectin 1)}}
-\DeclareAcronym{LAMC1}{short=\textit{LAMC1},long={laminin subunit γ 1},first-style=reversed,single={\textit{LAMC1} (laminin subunit γ 1)}}
-\DeclareAcronym{LUM}{short=\textit{LUM},long={lumican},first-style=reversed,single={\textit{LUM} (lumican)}}
-\DeclareAcronym{GRB2}{short=\textit{GRB2},long={growth factor receptor bound protein 2},first-style=reversed,single={\textit{GRB2} (growth factor receptor bound protein 2)}}
-\DeclareAcronym{RALB}{short=\textit{RALB},long={RAS like proto-oncogene B},first-style=reversed,single={\textit{RALB} (RAS like proto-oncogene B)}}
-\DeclareAcronym{ERVFRD-1}{short=\textit{ERVFRD-1},long={endogenous retrovirus group FRD member 1},first-style=reversed,single={\textit{ERVFRD-1} (endogenous retrovirus group FRD member 1)}}
-\DeclareAcronym{ERVW-1}{short=\textit{ERVW-1},long={endogenous retrovirus group W member 1},first-style=reversed,single={\textit{ERVW-1} (endogenous retrovirus group W member 1)}}
-\DeclareAcronym{MFSD2A}{short=\textit{MFSD2A},long={major facilitator superfamily domain containing 2A},first-style=reversed,single={\textit{MFSD2A} (major facilitator superfamily domain containing 2A)}}
-\DeclareAcronym{PRSS16}{short=\textit{PRSS16},long={protease, serine 16},first-style=reversed,single={\textit{PRSS16} (protease, serine 16)}}
-\DeclareAcronym{TIMP3}{short=\textit{TIMP3},long={TIMP metallopeptidase inhibitor 3},first-style=reversed,single={\textit{TIMP3} (TIMP metallopeptidase inhibitor 3)}}
-\DeclareAcronym{F11R}{short=\textit{F11R},long={F11 receptor},first-style=reversed,single={\textit{F11R} (F11 receptor)}}
-\DeclareAcronym{SDC4}{short=\textit{SDC4},long={syndecan 4},first-style=reversed,single={\textit{SDC4} (syndecan 4)}}
-\DeclareAcronym{FN1}{short=\textit{FN1},long={fibronectin 1},first-style=reversed,single={\textit{FN1} (fibronectin 1)}}
-\DeclareAcronym{ITGB1}{short=\textit{ITGB1},long={integrin subunit β 1},first-style=reversed,single={\textit{ITGB1} (integrin subunit β 1)}}
-\DeclareAcronym{ITGB1BP1}{short=\textit{ITGB1BP1},long={integrin subunit β 1 binding protein 1},first-style=reversed,single={\textit{ITGB1BP1} (integrin subunit β 1 binding protein 1)}}
-\DeclareAcronym{EREG}{short=\textit{EREG},long={epiregulin},first-style=reversed,single={\textit{EREG} (epiregulin)}}
-\DeclareAcronym{UNC93A}{short=\textit{UNC93A},long={unc-93 homolog A (C. elegans)},first-style=reversed,single={\textit{UNC93A} (unc-93 homolog A (C. elegans))}}
-\DeclareAcronym{UNC93B1}{short=\textit{UNC93B1},long={unc-93 homolog B1 (C. elegans)},first-style=reversed,single={\textit{UNC93B1} (unc-93 homolog B1 (C. elegans))}}
-\DeclareAcronym{WNT5A}{short=\textit{WNT5A},long={Wnt family member 5A},first-style=reversed,single={\textit{WNT5A} (Wnt family member 5A)}}
-\DeclareAcronym{IL1RL1}{short=\textit{IL1RL1},long={interleukin 1 receptor like 1},first-style=reversed,single={\textit{IL1RL1} (interleukin 1 receptor like 1)}}
-\DeclareAcronym{PLAC1}{short=\textit{PLAC1},long={placenta specific 1},first-style=reversed,single={\textit{PLAC1} (placenta specific 1)}}
-\DeclareAcronym{Afp}{short=\textit{Afp},long={α-fetoprotein},first-style=reversed,single={\textit{Afp} (α-fetoprotein)}}
-\DeclareAcronym{Gjb2}{short=\textit{Gjb2},long={gap junction protein β 2},first-style=reversed,single={\textit{Gjb2} (gap junction protein β 2)}}
-\DeclareAcronym{CD9}{short=\textit{CD9},long={CD9 molecule},first-style=reversed,single={\textit{CD9} (CD9 molecule)}}
+\DeclareAcronym{HSD3B1}{short=\textit{HSD3B1},long={hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=HSD3B1}{\textit{HSD3B1}} (hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1)}}
+\DeclareAcronym{CSH1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH1}{\textit{CSH1}},long={chorionic somatomammotropin hormone 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH1}{\textit{CSH1}} (chorionic somatomammotropin hormone 1)}}
+\DeclareAcronym{CSH2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH2}{\textit{CSH2}},long={chorionic somatomammotropin hormone 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH2}{\textit{CSH2}} (chorionic somatomammotropin hormone 2)}}
+\DeclareAcronym{CSHL1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSHL1}{\textit{CSHL1}},long={chorionic somatomammotropin hormone like 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSHL1}{\textit{CSHL1}} (chorionic somatomammotropin hormone like 1)}}
+\DeclareAcronym{GH2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=GH2}{\textit{GH2}},long={growth hormone 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=GH2}{\textit{GH2}} (growth hormone 2)}}
+\DeclareAcronym{PRG2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PRG2}{\textit{PRG2}},long={proteoglycan 2, pro eosinophil major basic protein},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PRG2}{\textit{PRG2}} (proteoglycan 2, pro eosinophil major basic protein)}}
+\DeclareAcronym{CRH}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CRH}{\textit{CRH}},long={corticotropin releasing hormone},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CRH}{\textit{CRH}} (corticotropin releasing hormone)}}
+\DeclareAcronym{KISS1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=KISS1}{\textit{KISS1}},long={KiSS-1 metastasis-suppressor},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=KISS1}{\textit{KISS1}} (KiSS-1 metastasis-suppressor)}}
+\DeclareAcronym{PAPPA}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PAPPA}{\textit{PAPPA}},long={pappalysin 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PAPPA}{\textit{PAPPA}} (pappalysin 1)}}
+\DeclareAcronym{ADAM12}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ADAM12}{\textit{ADAM12}},long={ADAM metallopeptidase domain 12},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ADAM12}{\textit{ADAM12}} (ADAM metallopeptidase domain 12)}}
+\DeclareAcronym{ANXA1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA1}{\textit{ANXA1}},long={annexin A1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA1}{\textit{ANXA1}} (annexin A1)}}
+\DeclareAcronym{ANXA2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA2}{\textit{ANXA2}},long={annexin A2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA2}{\textit{ANXA2}} (annexin A2)}}
+\DeclareAcronym{ANXA5}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA5}{\textit{ANXA5}},long={annexin A5},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ANXA5}{\textit{ANXA5}} (annexin A5)}}
+\DeclareAcronym{S100A11}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=S100A11}{\textit{S100A11}},long={S100 calcium binding protein A11 (calgizzarin)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=S100A11}{\textit{S100A11}} (S100 calcium binding protein A11; calgizzarin)}}
+\DeclareAcronym{S100A10}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=S100A10}{\textit{S100A10}},long={S100 calcium binding protein A10 (calpectin-I light polypeptide)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=S100A10}{\textit{S100A10}} (S100 calcium binding protein A10; calpectin-I light polypeptide)}}
+\DeclareAcronym{LGALS1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LGALS1}{\textit{LGALS1}},long={galectin 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LGALS1}{\textit{LGALS1}} (galectin 1)}}
+\DeclareAcronym{LAMC1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LAMC1}{\textit{LAMC1}},long={laminin subunit γ 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LAMC1}{\textit{LAMC1}} (laminin subunit γ 1)}}
+\DeclareAcronym{LUM}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LUM}{\textit{LUM}},long={lumican},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=LUM}{\textit{LUM}} (lumican)}}
+\DeclareAcronym{GRB2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=GRB2}{\textit{GRB2}},long={growth factor receptor bound protein 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=GRB2}{\textit{GRB2}} (growth factor receptor bound protein 2)}}
+\DeclareAcronym{RALB}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=RALB}{\textit{RALB}},long={RAS like proto-oncogene B},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=RALB}{\textit{RALB}} (RAS like proto-oncogene B)}}
+\DeclareAcronym{ERVFRD-1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ERVFRD-1}{\textit{ERVFRD-1}},long={endogenous retrovirus group FRD member 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ERVFRD-1}{\textit{ERVFRD-1}} (endogenous retrovirus group FRD member 1)}}
+\DeclareAcronym{ERVW-1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ERVW-1}{\textit{ERVW-1}},long={endogenous retrovirus group W member 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ERVW-1}{\textit{ERVW-1}} (endogenous retrovirus group W member 1)}}
+\DeclareAcronym{MFSD2A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=MFSD2A}{\textit{MFSD2A}},long={major facilitator superfamily domain containing 2A},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=MFSD2A}{\textit{MFSD2A}} (major facilitator superfamily domain containing 2A)}}
+\DeclareAcronym{PRSS16}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PRSS16}{\textit{PRSS16}},long={protease, serine 16},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PRSS16}{\textit{PRSS16}} (protease, serine 16)}}
+\DeclareAcronym{TIMP3}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=TIMP3}{\textit{TIMP3}},long={TIMP metallopeptidase inhibitor 3},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=TIMP3}{\textit{TIMP3}} (TIMP metallopeptidase inhibitor 3)}}
+\DeclareAcronym{F11R}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=F11R}{\textit{F11R}},long={F11 receptor},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=F11R}{\textit{F11R}} (F11 receptor)}}
+\DeclareAcronym{SDC4}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=SDC4}{\textit{SDC4}},long={syndecan 4},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=SDC4}{\textit{SDC4}} (syndecan 4)}}
+\DeclareAcronym{FN1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=FN1}{\textit{FN1}},long={fibronectin 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=FN1}{\textit{FN1}} (fibronectin 1)}}
+\DeclareAcronym{ITGB1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1}{\textit{ITGB1}},long={integrin subunit β 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1}{\textit{ITGB1}} (integrin subunit β 1)}}
+\DeclareAcronym{ITGB1BP1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1BP1}{\textit{ITGB1BP1}},long={integrin subunit β 1 binding protein 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=ITGB1BP1}{\textit{ITGB1BP1}} (integrin subunit β 1 binding protein 1)}}
+\DeclareAcronym{EREG}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=EREG}{\textit{EREG}},long={epiregulin},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=EREG}{\textit{EREG}} (epiregulin)}}
+\DeclareAcronym{UNC93A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}},long={unc-93 homolog A (C. elegans)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93A}{\textit{UNC93A}} (unc-93 homolog A (C. elegans))}}
+\DeclareAcronym{UNC93B1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}},long={unc-93 homolog B1 (C. elegans)},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=UNC93B1}{\textit{UNC93B1}} (unc-93 homolog B1 (C. elegans))}}
+\DeclareAcronym{WNT5A}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=WNT5A}{\textit{WNT5A}},long={Wnt family member 5A},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=WNT5A}{\textit{WNT5A}} (Wnt family member 5A)}}
+\DeclareAcronym{IL1RL1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=IL1RL1}{\textit{IL1RL1}},long={interleukin 1 receptor like 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=IL1RL1}{\textit{IL1RL1}} (interleukin 1 receptor like 1)}}
+\DeclareAcronym{PLAC1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PLAC1}{\textit{PLAC1}},long={placenta specific 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=PLAC1}{\textit{PLAC1}} (placenta specific 1)}}
+\DeclareAcronym{Afp}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Afp}{\textit{Afp}},long={α-fetoprotein},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Afp}{\textit{Afp}} (α-fetoprotein)}}
+\DeclareAcronym{Gjb2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Gjb2}{\textit{Gjb2}},long={gap junction protein β 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=Gjb2}{\textit{Gjb2}} (gap junction protein β 2)}}
+\DeclareAcronym{CD9}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CD9}{\textit{CD9}},long={CD9 molecule},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CD9}{\textit{CD9}} (CD9 molecule)}}
 
 %%% Local Variables:
 %%% mode: latex
